refs/ps/testcases/A3/Testcases/Error/tc13.c
void main()
{
    float a,b;
    bool c;
    int d;
    c = a*b >= a! b<a;
    d=c?0:1;
}